# modsiren

./: PARQUET_DATALOADER_README.md  bash_env.sh  convert_np_to_polars.py  load_modules.sh  modsiren.py  modsiren_dfl.py  modsiren_end_to_end.py  parquet_datamodule.py  parquet_example.py  pyproject.toml  shuffle_data.ipynb  shuffle_worker.py
